# octomate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
specs/: 1.0.md
src/: command.rs  error.rs  io.rs  main.rs  octomate.rs  options.rs
